tests/ui/assert-clipboard-2.goml
// Checks that when `wait-for-clipboard` fails, there is nothing run afterwards.

go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-timeout: 500

wait-for-clipboard: "hell"
//~^ ERROR: [`hello` isn't equal to `hell`]
// Shoud not be displayed.
wait-for-clipboard-false: ""
